<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.antso.expensesmanager.DebugActivity">

    <Button
        android:id="@+id/importFromMyMoneyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/debug_import_button"
        android:layout_gravity="left" />

    <Button
        android:id="@+id/exportButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/debug_export_button"
        android:layout_gravity="left" />

    <Button
        android:id="@+id/testButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:text="@string/debug_add_account_button"
        android:layout_gravity="left" />

    <Button
        android:id="@+id/testButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:text="@string/debug_add_transactione_button"
        android:layout_gravity="left" />

    <Button
        android:id="@+id/clearDataButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="260dp"
        android:text="@string/debug_clear_data_button"
        android:layout_gravity="left" />

</FrameLayout>
