<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.antso.expensesmanager.transactions.TransactionEntryActivity" >

    <group
        android:id="@+id/transaction_menu_group">

        <item android:id="@+id/action_transaction_search"
            android:title="@string/action_transaction_search"
            android:icon="@drawable/ic_action_search"
            android:showAsAction="withText|ifRoom" />

        <item android:id="@+id/action_transaction_search_undo"
            android:title="@string/action_transaction_search_undo"
            android:icon="@drawable/ic_action_undo"
            android:visible="false"
            android:showAsAction="withText|ifRoom" />

        <item android:id="@+id/action_transaction_add"
            android:title="@string/action_transaction_add"
            android:icon="@drawable/ic_action_new"
            android:showAsAction="withText|ifRoom" />

       </group>
</menu>
